# pinegraf

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLEANUP_REPORT.md  Dockerfile  FOUNDATION.md  GCP_MIGRATION.md  README.md  STATUS.md  VERIFICATION.md  WEEK2.md  alembic.ini  cloudbuild.yaml  docker-compose.yml  fly.toml  pyproject.toml  wrangler.jsonc
.codex/: config.toml
alembic/: env.py
backend/: admin_auth.py  admin_session.py  audit.py  basic_auth.py  class_year.py  config.py  demo_seed.py  live_logs.py  main.py  pricing.py  progress.py  request_logging.py  site_auth.py  source_identifiers.py  web_api.py
data/: alum_data.xlsx  alumni.csv
docs/: DESIGN_SYSTEM.md  architecture.md  auth.md  canonical-stat-queries.md  claims-browse.md  cold-start.md  confidence-removed.md  content-versioning-gap.md  data_model.md  demo-environment.md  extraction-model.md  graph_schema.md  maintenance-schedule.md  parse-trigger-policy.md  query_examples.md  reliability-design.md  restore-diff-2026-05-26.md  run-pause-resume.md  run-stop-resume.md  sources.md  temporal-design.md
frontend/: admin.html  admin.js  app.js  index.html  login.html  styles.css
scripts/: __init__.py  audit_extraction.py  backfill_entity_embeddings.py  backfill_entity_links.py  bench_crawl.py  cleanup_attribution.py  cleanup_invalid_person_entities.py  demo_handcraft.py  diagnose_entity_coverage.py  enrich_wikidata.py  eval_extraction.py  generate_logo_pngs.py  import_alumni_xlsx.py  import_alumni_xlsx.py.legacy  normalize_relationship_types.py  rebuild_page_text.py  reconcile_entities.py  reparse_all.py  show_snapshot.py
tests/: claim_helpers.py  conftest.py  test_admin_endpoints.py  test_admin_stats.py  test_admin_usage_live.py  test_api.py  test_ask_source_dedup.py  test_ask_stream.py  test_backend_diagnostics.py  test_claim_rendering.py  test_claims_api.py  test_class_year_normalization.py  test_conflicts_frontend_navigation.py  test_conftest_guard.py  test_crawler.py  test_data_api_auth.py  test_demo_seed.py  test_entity_resolver.py  test_extract.py  test_extraction_audit.py  test_extraction_cost.py  test_extraction_incidental_projects.py  test_health.py  test_identity_review.py  test_import_alumni_xlsx.py  test_ingestion_adhoc.py  test_live_logs.py  (+37 more)
(+116 files in other folders)
